syntax = "proto3";

package event;

message Event {
  string id = 1;
  string title = 2;
  string started_at = 3;
  string finished_at = 4;
  string description = 5;
  string user_id = 6;
  string notify = 7;
}

message DeleteEventRequest {
  string id = 1;
}

message EventResponse {
  bool result = 1;
  string error = 2;
}

message EventListRequest {
  string date = 1;
}

message EventListResponse {
  repeated Event events = 1;
}
